change trailer feature + fix overflow para issue

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,9 @@
     opacity: 1;
   }
 }
+
+.align-vertical-text-4 {
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+}
